@@ -15,6 +15,8 @@
 - Modules shouldn't be loaded twice
 - non-blocking connect
 - make filter order adjustable
+- keep list of channels a nick is on
+- add member 'nick' to struct line
 
 Ideas: (ideas for stuff you might want to work on, and is currently not 
 		planned to be implemented)
