@@ -1,4 +1,6 @@
 Ctrlproxy 2.7:
+ * Make name and hostmask attribute of nick on network shared 
+ 	(Daniel Poelzleithner <ctrlproxy@poelzi.org>
  * Do the actual NICK after GHOST'ing another nick
  * Fix bug with setting PRIVATE too often
  * Fix issue with NickServ IDENTIFY'ing when connecting to server
